# flexvdi-client

./: .gitignore  CMakeLists.txt
resources/: CMakeLists.txt  flexvdi-client.gresource.xml  paralax.gresource.xml  spice-win.ui  style.css  window.ui
scripts/: build_appimage.sh
src/: CMakeLists.txt  about.c  client-app.c  client-conn.c  client-log.c  client-request.c  client-request.h  client-win.c  client-win.h  configuration.c  configuration.h  conn-forward.c  flexdp.h  legacy-config-parser-linux.c  legacy-config-parser-win32.c  spice-win.c  terminalid-linux.c
test/: CMakeLists.txt
